--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/kurtp23/recipe-book#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "express-handlebars": "^3.0.0",
-    "express": "^4.17.1"
+    "sequelize-cli": "^6.2.0"
   }
 }
