--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/kurtp23/recipe-book#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "express-handlebars": "^3.0.0",
-    "express": "^4.17.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
   }
 }
