--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.0.0",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0",
