--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,11 @@
         "ecmaVersion": 12
     },
     "rules": {
-        "no-console": "warn"
+        "no-console": "warn",
+        "no-unused-vars": "warn",
+        "radix": "warn",
+        "object-shorthand": "warn",
+        "consistent-return": "warn",
+        "no-throw-literal": "warn"
     }
 }
