--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/kurtp23/recipe-book.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexander Fok, Kurt Phillips, Ray Luna",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kurtp23/recipe-book/issues"
